--- a/back-end/package.json
+++ b/back-end/package.json
@@ -24,6 +24,8 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
@@ -31,6 +33,9 @@
     "class-validator": "^0.14.0",
     "joi": "^17.9.2",
     "multer": "^1.4.5-lts.1",
+    "passport-42": "^1.2.6",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
