--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     ports:
     - "5432:5432"
     volumes:
-    - /var/lib/postgresql/data:/var/lib/postgresql/data
+    - "/mnt/nfs/homes/${USER}/sgoinfre/postgresql/data:/mnt/nfs/homes/mbouzaie/sgoinfre/postgresql/data"
     env_file:
     - docker.env
-    networks:
-    - postgres
+    #networks:
+    #- postgres
  
   pgadmin:
     links:
@@ -20,12 +20,12 @@ services:
     ports:
     - "8080:80"
     volumes:
-    - /var/lib/pgadmin/data:/root/.pgadmin
+    - /sgoinfre/goinfre/Perso/mbouzaie/pgadmin/data:/root/.pgadmin
     env_file:
     - docker.env
-    networks:
-    - postgres
+    #networks:
+    #- postgres
 
-networks:
-  postgres:
-    driver: bridge
+#networks:
+#  postgres:
+#    driver: bridge
