--- a/back-end/package.json
+++ b/back-end/package.json
@@ -28,14 +28,19 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "joi": "^17.9.2",
     "multer": "^1.4.5-lts.1",
+    "otplib": "^12.0.1",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.0",
+    "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
